[TASK-8] фикс днд: при onMouseDown на элементе калькулятора высчитывало отступ от этого элемента, исправлено на подсчет отступа от самого калькулятора [TASK-10] фикс логики: появление и сокрытие кнопок теперь сделано через createRef для этих кнопок

--- a/src/Components/UI/History/Button/MyHistoryMoveButton.module.css
+++ b/src/Components/UI/History/Button/MyHistoryMoveButton.module.css
@@ -1,6 +1,6 @@
 .myHstMoveBtn {
     cursor: pointer;
-    visibility: hidden;
+    visibility: visible;
     border: 0;
     height: 17px;
     width: 17px;
